--- a/views/announcement.ejs
+++ b/views/announcement.ejs
@@ -34,7 +34,7 @@
 
             <ul>
                 <li class="announcementTitle">Season 14 Level Cap</li>
-                <li><a href="https://comicbook.com/gaming/news/apex-legends-season-14-level-cap/"><img src="assets/pic3.png" alt="Picture 3"></a></li>
+                <li><a href="announcement2"><img src="assets/pic3.png" alt="Picture 3"></a></li>
             </ul>
         </div>
     </div>
